# safecpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  error_codes.md  setupGTest.cmake
include/: AccessManager.hpp  BorrowChecker.hpp  ImmutRef.hpp  MutRef.hpp  ReferenceCounter.hpp  ReferenceImmutable.hpp  ReferenceLock.hpp  ReferenceMutable.hpp
include/internal/: ARC.hpp  ReferenceCounter.hpp  ReferenceLock.hpp  ReferenceTracker.hpp
lib/: ARC.cpp  ReferenceCounter.cpp  ReferenceLock.cpp  ReferenceTracker.cpp
test/: BorrowChecker.cpp  example.cpp
tests/: AccessManager.cpp  BorrowChecker.cpp
